...
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:text="Lorem Ipsum is simply dummy text of the printing  and typesetting industry. Lorem Ipsum has been the industry's standard  dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specim"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_location">
        </TextView>

        <TextView
...
            android:id="@+id/signed_up_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:text="Signed Up"
            android:textSize="34sp"
            android:textColor="@color/red"
            android:gravity="center"
            android:textStyle="bold"
            android:visibility="invisible"
            android:shadowColor="#000000"
...
