<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home"
        tools:ignore="MenuTitle"/>
    <item
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/event"
        tools:ignore="MenuTitle"/>
    <item
        android:id="@+id/scanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/scanner"
        tools:ignore="MenuTitle"/>
    <item
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/profile"
        tools:ignore="MenuTitle"/>
</menu>